// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`auto runtime (default) compiles for Metro ios in dev 1`] = `
"Object.defineProperty(exports, "__esModule", { value: true });exports.default = App;
var _reactNative = require("react-native");var _jsxDevRuntime = require("react/jsx-dev-runtime");var _jsxFileName = "/unknown";
function App() {
  return /*#__PURE__*/(0, _jsxDevRuntime.jsxDEV)(_reactNative.View, {}, void 0, false, { fileName: _jsxFileName, lineNumber: 4, columnNumber: 12 }, this);
}"
`;

exports[`auto runtime (default) compiles for Metro ios in prod 1`] = `
"Object.defineProperty(exports, "__esModule", { value: true });exports.default = App;
var _reactNative = require("react-native");var _jsxRuntime = require("react/jsx-runtime");
function App() {
  return /*#__PURE__*/(0, _jsxRuntime.jsx)(_reactNative.View, {});
}"
`;

exports[`auto runtime (default) compiles for Metro web in dev 1`] = `
"var _interopRequireDefault = require("@babel/runtime/helpers/interopRequireDefault");Object.defineProperty(exports, "__esModule", { value: true });exports.default = App;var _View = _interopRequireDefault(require("react-native-web/dist/exports/View"));var _jsxDevRuntime = require("react/jsx-dev-runtime");var _jsxFileName = "/unknown";

function App() {
  return /*#__PURE__*/(0, _jsxDevRuntime.jsxDEV)(_View.default, {}, void 0, false, { fileName: _jsxFileName, lineNumber: 4, columnNumber: 12 }, this);
}"
`;

exports[`auto runtime (default) compiles for Metro web in prod 1`] = `
"var _interopRequireDefault = require("@babel/runtime/helpers/interopRequireDefault");Object.defineProperty(exports, "__esModule", { value: true });exports.default = App;var _View = _interopRequireDefault(require("react-native-web/dist/exports/View"));var _jsxRuntime = require("react/jsx-runtime");

function App() {
  return /*#__PURE__*/(0, _jsxRuntime.jsx)(_View.default, {});
}"
`;

exports[`classic runtime compiles for Metro ios in dev 1`] = `
"Object.defineProperty(exports, "__esModule", { value: true });exports.default = App;
var _reactNative = require("react-native");var _jsxFileName = "/unknown";
function App() {
  return /*#__PURE__*/React.createElement(_reactNative.View, { __self: this, __source: { fileName: _jsxFileName, lineNumber: 4, columnNumber: 12 } });
}"
`;

exports[`classic runtime compiles for Metro ios in prod 1`] = `
"Object.defineProperty(exports, "__esModule", { value: true });exports.default = App;
var _reactNative = require("react-native");
function App() {
  return /*#__PURE__*/React.createElement(_reactNative.View, null);
}"
`;

exports[`classic runtime compiles for Metro web in dev 1`] = `
"var _interopRequireDefault = require("@babel/runtime/helpers/interopRequireDefault");Object.defineProperty(exports, "__esModule", { value: true });exports.default = App;var _View = _interopRequireDefault(require("react-native-web/dist/exports/View"));var _jsxFileName = "/unknown";

function App() {
  return /*#__PURE__*/React.createElement(_View.default, { __self: this, __source: { fileName: _jsxFileName, lineNumber: 4, columnNumber: 12 } });
}"
`;

exports[`classic runtime compiles for Metro web in prod 1`] = `
"var _interopRequireDefault = require("@babel/runtime/helpers/interopRequireDefault");Object.defineProperty(exports, "__esModule", { value: true });exports.default = App;var _View = _interopRequireDefault(require("react-native-web/dist/exports/View"));

function App() {
  return /*#__PURE__*/React.createElement(_View.default, null);
}"
`;
